update the LLM+Langchain Tutorial

--- a/tutorial/LLM+Langchain/Week-5/Week_5_unstructured.ipynb
+++ b/tutorial/LLM+Langchain/Week-5/Week_5_unstructured.ipynb
@@ -655,13 +655,182 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "id": "MElmWUDhWgeS"
    },
+   "source": [
+    "## Create a second vectorstore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def create_trinity_vectorstore(filename: str):\n",
+    "    \"\"\"\n",
+    "    Create a vectorstore from a pdf file.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # remove the ext of the filename\n",
+    "\n",
+    "    dir_ = filename.split('.')[0].split(\"/\")[-1]\n",
+    "\n",
+    "    fig_dir = f\"{dir_}/figures\"\n",
+    "\n",
+    "    if not os.path.isdir(fig_dir):\n",
+    "        os.makedirs(fig_dir)\n",
+    "    else:\n",
+    "        return None\n",
+    "\n",
+    "    elements = partition_pdf(filename,\n",
+    "                             chunking_strategy='by_title',\n",
+    "                             infer_table_structure=True,\n",
+    "                             extract_image_block_types=['Image', 'Table'],\n",
+    "                             max_characters=4000,\n",
+    "                             new_after_n_chars=3800,\n",
+    "                             combine_text_under_n_chars=2000,\n",
+    "                             extract_image_block_output_dir=fig_dir,\n",
+    "                             strategy='hi_res')\n",
+    "\n",
+    "    vectorstore = elements_2_vectorstore(elements, filename=filename.split(\"/\")[-1], fig_dir=fig_dir)\n",
+    "\n",
+    "    return vectorstore\n",
+    "\n",
+    "\n",
+    "def elements_2_vectorstore(elements: List[CompositeElement], filename: str,\n",
+    "                           fig_dir: Optional[str] = None,\n",
+    "                           ):\n",
+    "    documents = []\n",
+    "\n",
+    "    for element in elements:\n",
+    "\n",
+    "        str_type = str(type(element))\n",
+    "\n",
+    "        summary = get_summary(element, model)\n",
+    "\n",
+    "        if 'CompositeElement' in str_type:\n",
+    "            type_ = 'text'\n",
+    "        if 'Table' in str_type:\n",
+    "            type_ = 'table'\n",
+    "\n",
+    "        documents.append(Document(page_content=summary, metadata={'type': type_, \"filename\": filename}))\n",
+    "\n",
+    "    for image_file in os.listdir(fig_dir):\n",
+    "        image_path = f'{fig_dir}/{image_file}'\n",
+    "\n",
+    "        summary = get_image_summary(image_path, model)\n",
+    "\n",
+    "        documents.append(\n",
+    "            Document(page_content=summary, metadata={'type': 'image', 'image_source': f'{fig_dir}/{image_file}',\n",
+    "                                                     \"filename\": filename}))\n",
+    "\n",
+    "    vectorstore = FAISS.from_documents(documents=documents, embedding=embeddings)\n",
+    "\n",
+    "    return vectorstore\n",
+    "\n",
+    "\n",
+    "def image_to_base64(image_path):\n",
+    "\n",
+    "  with Image.open(image_path) as image:\n",
+    "    buffered = io.BytesIO()\n",
+    "    image.save(buffered, format=\"JPEG\")\n",
+    "    image_str = base64.b64encode(buffered.getvalue())\n",
+    "  return image_str.decode('utf-8')\n",
+    "\n",
+    "\n",
+    "def get_summary(element, model):\n",
+    "\n",
+    "  str_type = str(type(element))\n",
+    "\n",
+    "  if 'CompositeElement' in str_type:\n",
+    "    prompt = f\"Summarize the following text:\\n\\n{element}\\n\\nSummary:\"\n",
+    "  if 'Table' in str_type:\n",
+    "    prompt = f\"Summarize the following table:\\n\\n{element}\\n\\nSummary:\"\n",
+    "\n",
+    "  response = model.invoke(prompt)\n",
+    "\n",
+    "  return response.content\n",
+    "\n",
+    "\n",
+    "def get_image_summary(filename, model):\n",
+    "\n",
+    "  image_str = image_to_base64(filename)\n",
+    "\n",
+    "  human_message = HumanMessage(content=[{'type': 'text',\n",
+    "                        'text': 'What is in this image?'},\n",
+    "                        {'type': 'image_url',\n",
+    "                         'image_url': {\n",
+    "                          'url': f\"data:image/png;base64,{image_str}\"}\n",
+    "                        }])\n",
+    "\n",
+    "  response = model.invoke([human_message])\n",
+    "\n",
+    "  return response.content"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorstore_2 = create_trinity_vectorstore(\"Hypochlorous Acid.pdf\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Save the vectorstore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorstore.save_local(\"faiss_index\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Load the vectorstore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorstore_1 = FAISS.load_local(\n",
+    "    \"faiss_index\", embeddings, allow_dangerous_deserialization=True\n",
+    ")\n",
+    "\n",
+    "vectorstore_1.docstore._dict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Concatenate vectorstore"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorstore_1.merge_from(vectorstore_2)"
+   ]
   }
  ],
  "metadata": {
