update Week-1 and Week-2 notebooks

--- a/tutorial/LLM+Langchain/Week-1/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-1/notebook.ipynb
@@ -2120,6 +2120,54 @@
   },
   {
    "cell_type": "markdown",
+   "id": "25a8ec7b-1a3f-4eb1-b210-747d5943b7af",
+   "metadata": {},
+   "source": [
+    "### This is what I do in my work:\n",
+    "\n",
+    "I use runtime configuration to target a specific data section with the applied attribute.\n",
+    "\n",
+    "More specifically, there are many types of cosmetic products, such as:\n",
+    "\n",
+    "- Lipstick\n",
+    "- Lip Gloss\n",
+    "- Mascara\n",
+    "- Blush\n",
+    "- Foundation\n",
+    "- Nail Polish\n",
+    "- Eyeliner\n",
+    "- Eye Pencil\n",
+    "\n",
+    "These products are applied to different areas: face, nails, eyes, and lips.\n",
+    "\n",
+    "You can retrieve information more efficiently and accurately if you identify the correct application area beforehand."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63a516b1-a7f7-4bea-8567-32d46570e2d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "embedding = HuggingFaceEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
+    "vectorstore = FAISS.from_documents(self.documents, embedding=embedding)\n",
+    "\n",
+    "retriever = vectorstore.as_retriever(search_type='similarity',\n",
+    "                                     search_kwargs={'k': self._k}).configurable_fields(search_kwargs=ConfigurableField(id=\"faiss_search_kwargs\"))\n",
+    "\n",
+    "semantic_retriever = retrievers['semantic']\n",
+    "semantic_documents = semantic_retriever.invoke(product, config={\"configurable\":\n",
+    "                                             {\"faiss_search_kwargs\":\n",
+    "                                                  {\"fetch_k\":20,\n",
+    "                                                   \"k\": 2,\n",
+    "                                                   \"filter\": {\"applied\": area}}}})\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "33b59b49-6c02-42a5-b93c-c7126ab2f2e3",
    "metadata": {},
    "source": [
