--- a/tutorial/LLM+Langchain/Week-1/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-1/notebook.ipynb
@@ -59,7 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
+    "# from langchain.chat_models import ChatOpenAI\n",
+    "from langchain_openai import ChatOpenAI\n",
     "\n",
     "from src.initialization import credential_init\n",
     "from src.io.path_definition import get_project_dir\n",
@@ -285,9 +286,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = chat_prompt.invoke({\"query\": \"\"\"\n",
-    "                                      A chef just finished his scallops \n",
-    "                                      but you find it is still raw inside.\n",
+    "prompt = chat_prompt.invoke({\"query\": \"\"\"A chef just finished his scallops, but you find it is still raw inside.\n",
     "                                      \"\"\"})"
    ]
   },
@@ -438,8 +437,7 @@
     "                                                 human_message\n",
     "                                               ])\n",
     "\n",
-    "prompt = chat_prompt.invoke({\"query\": \"\"\"A chef just finished his scallops \n",
-    "but you find it is still raw inside.\"\"\"})\n",
+    "prompt = chat_prompt.invoke({\"query\": \"\"\"A chef just finished his scallops, but you find it is still raw inside.\"\"\"})\n",
     "output = model.invoke(prompt)\n",
     "translation_function(text=output.content)"
    ]
@@ -484,8 +482,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt = chat_prompt.invoke({\"query\": \"\"\"You are going to talk about your \n",
-    "view on the southern boarder\"\"\"})\n",
+    "prompt = chat_prompt.invoke({\"query\": \"\"\"You are going to talk about your view on the southern boarder\"\"\"})\n",
     "output = model.invoke(prompt)\n",
     "\n",
     "print(translation_function(text=output.content))"
@@ -769,8 +766,8 @@
     "system_message = SystemMessagePromptTemplate(prompt=system_prompt)\n",
     "\n",
     "human_prompt = PromptTemplate(template='{query}',\n",
-    "                                  input_variables=[\"query\"]\n",
-    "                                  )\n",
+    "                              input_variables=[\"query\"]\n",
+    "                             )\n",
     "human_message = HumanMessagePromptTemplate(prompt=human_prompt)\n",
     "\n",
     "chat_prompt = ChatPromptTemplate.from_messages([system_message,\n",
@@ -855,7 +852,6 @@
     "start = \"臺北101\"\n",
     "end = \"淡水老街\"\n",
     "\n",
-    "\n",
     "prompt = chat_prompt.invoke({\"start\": start, \"end\": end})\n",
     "\n",
     "output = model.invoke(prompt)\n",
@@ -912,14 +908,6 @@
     "my_chat_prompt_template = build_standard_chat_prompt_template(input_)\n",
     "print(my_chat_prompt_template)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60915871-3d19-40c2-af4f-0b9d1d8f7295",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1521,7 +1509,6 @@
     "          跨校的夥伴關係有哪些類型？其執行困境有哪些？\n",
     "          \"\"\"\n",
     "\n",
-    "\n",
     "prompt = principle_interview_chat_template.invoke({\"query\": \"請針對台灣校長甄試這幾年的考題趨勢，請嘗試命出10個題目。\",\n",
     "                                                   \"example\": example})\n",
     "output = model.invoke(prompt)"
@@ -1759,7 +1746,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install rank_bm25"
+    "# !pip install rank_bm25"
    ]
   },
   {
@@ -1826,8 +1813,20 @@
    "outputs": [],
    "source": [
     "content = \", \".join(recipe_test[0]['ingredients'])\n",
-    "\n",
-    "output = bm25_retriever.invoke(content)"
+    "# print(content)\n",
+    "output = bm25_retriever.invoke(content)\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "63c77174-0671-4e30-b88c-80927660ca24",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# content = \"&&\".join(recipe_test[0]['ingredients'])\n",
+    "# print(content)"
    ]
   },
   {
