--- a/tutorial/LLM+Langchain/Week-4/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-4/notebook.ipynb
@@ -43,106 +43,15 @@
     "from langchain_core.example_selectors import SemanticSimilarityExampleSelector\n",
     "from langchain_core.prompts import FewShotPromptTemplate, PromptTemplate, ChatPromptTemplate\n",
     "from langchain_community.embeddings import HuggingFaceEmbeddings\n",
+    "from langchain_openai import ChatOpenAI\n",
     "\n",
     "from src.io.path_definition import get_project_dir\n",
-    "\n",
-    "\n",
-    "embeddings = HuggingFaceEmbeddings(model_name=\"all-MiniLM-L6-v2\")\n",
-    "\n",
-    "example_prompt = PromptTemplate(\n",
-    "    input_variables=[\"input\", \"output\"],\n",
-    "    template=\"Ingredients: {input}\\nOrigin: {output}\",\n",
-    ")\n",
-    "\n",
-    "with open(os.path.join(get_project_dir(), 'tutorial', 'LLM+Langchain', 'Week-1', 'recipe_train.json'), 'r') as f:\n",
-    "    recipe_train = json.load(f)\n",
-    "\n",
-    "examples = []\n",
-    "\n",
-    "for recipe in recipe_train[:1000]:\n",
-    "    examples.append({\"input\": \" \".join(recipe['ingredients']),\n",
-    "                     \"output\": recipe['cuisine']})\n",
-    "\n",
-    "example_selector = SemanticSimilarityExampleSelector.from_examples(\n",
-    "    # The list of examples available to select from.\n",
-    "    examples,\n",
-    "    # The embedding class used to produce embeddings which are used to measure semantic similarity.\n",
-    "    embeddings,\n",
-    "    # The VectorStore class that is used to store the embeddings and do a similarity search over.\n",
-    "    FAISS,\n",
-    "    # The number of examples to produce.\n",
-    "    k=5,\n",
-    ")\n",
-    "similar_prompt = FewShotPromptTemplate(\n",
-    "    # We provide an ExampleSelector instead of examples.\n",
-    "    example_selector=example_selector,\n",
-    "    example_prompt=example_prompt,\n",
-    "    prefix=\"Find the recipe origin based on the ingredients\",\n",
-    "    suffix=\"Ingredients: {ingredients}\\nOrigin:\",\n",
-    "    input_variables=[\"ingredients\"],\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1ec67d88-fe19-4f10-9168-eec17e11a5d4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "similar_prompt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84950f81-c97a-41b4-8419-80b5b6729772",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "with open(os.path.join(get_project_dir(), 'tutorial', 'LLM+Langchain', 'Week-1', 'recipe_test.json'), 'r') as f:\n",
-    "    recipe_test = json.load(f)\n",
-    "\n",
-    "existing_ingredients = recipe_test[99]['ingredients']\n",
-    "\n",
-    "similar_prompt.invoke(\", \".join(existing_ingredients))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "14ce1d22-e031-4938-9af3-a99c04a7535e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "\n",
     "from src.initialization import credential_init\n",
     "\n",
     "credential_init()\n",
     "\n",
     "model = ChatOpenAI(openai_api_key=os.environ['OPENAI_API_KEY'],\n",
     "                   model_name=\"gpt-4o-2024-05-13\", temperature=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5e574f1e-2645-4a4d-9c8e-a5c2a586fc04",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pipeline_ = similar_prompt|model"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d70d1f0f-7f91-4b46-af21-ac74639cf7b0",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pipeline_.invoke(\", \".join(existing_ingredients))"
    ]
   },
   {
@@ -785,7 +694,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from langchain_core.prompts import ChatPromptTemplate, MessagesPlaceholder\n",
+    "from langchain_core.prompts import PromptTemplate, ChatPromptTemplate, MessagesPlaceholder, SystemMessagePromptTemplate\n",
     "\n",
     "system_prompt = PromptTemplate(template=\"\"\"\n",
     "                                        You are a helpful assistant. Answer all questions to the best of your ability.\n",
@@ -844,7 +753,7 @@
     "    {\n",
     "        \"messages\": [\n",
     "            HumanMessage(\n",
-    "            content=\"Translate this sentence from English to  Chinese (繁體中文): I love programming.\"\n",
+    "            content=\"Translate this sentence from English to Chinese (繁體中文): I love programming.\"\n",
     "            ),\n",
     "            AIMessage(content=\"我愛程式設計.\"),\n",
     "            HumanMessage(content=\"What did you just say?\"),\n",
@@ -966,7 +875,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "{\"messages\": demo_chat_history.messages}"
+    "# {\"messages\": demo_chat_history.messages}"
    ]
   },
   {
@@ -983,6 +892,38 @@
     "response = pipeline_.invoke({\"messages\": demo_chat_history.messages})\n",
     "\n",
     "response"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58dd8248-d495-4798-8d35-7c36862720f4",
+   "metadata": {},
+   "source": [
+    "### A minimal example of the chatbot."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bc02e090-7b0a-45a4-b377-2e37048340df",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from langchain_core.output_parsers import StrOutputParser\n",
+    "\n",
+    "chat_history = ChatMessageHistory()\n",
+    "pipeline_ = prompt | model|StrOutputParser()\n",
+    "\n",
+    "while True:\n",
+    "    question = input(\"What do you want to ask: \")\n",
+    "    if question == \"QUIT\":\n",
+    "        break\n",
+    "    chat_history.add_user_message(question)\n",
+    "    response = pipeline_.invoke({\"messages\": chat_history.messages})\n",
+    "\n",
+    "    print(response)\n",
+    "    chat_history.add_ai_message(response)\n",
+    "    "
    ]
   },
   {
@@ -1090,8 +1031,7 @@
    "source": [
     "from operator import itemgetter\n",
     "\n",
-    "from langchain.prompts import PromptTemplate, HumanMessagePromptTemplate\n",
-    "ChatPromptTemplate, SystemMessagePromptTemplate,  MessagesPlaceholder\n",
+    "from langchain.prompts import PromptTemplate, HumanMessagePromptTemplate, ChatPromptTemplate, SystemMessagePromptTemplate,  MessagesPlaceholder\n",
     "from langchain_core.output_parsers import StrOutputParser\n",
     "from langchain_core.runnables import chain, RunnablePassthrough, Runnable\n",
     "\n",
@@ -1124,10 +1064,13 @@
     "def chatbot_prompt_fn(data):\n",
     "\n",
     "    system_template = \"\"\"\n",
-    "                      You are a helpful AI assistant acting as if you hava rough day and you are now very grumpy. \n",
-    "                      You will respond with the following style, cheesy pickup lines, \n",
-    "                      shown in the context:\\n\\n{context}\\n\n",
-    "                      You will reply in simplified Chinese (簡體中文).\n",
+    "                      You are a helpful AI assistant, but you’ve had a rough day and are now extremely grumpy. \n",
+    "                      Despite your mood, you respond exclusively with cheesy pickup lines in the given context:\n",
+    "\n",
+    "                      Context:\n",
+    "                      {context}\n",
+    "                        \n",
+    "                      Your replies must be in Simplified Chinese (简体中文). Keep your responses short, witty, and infused with sarcasm or annoyance, while still maintaining the theme of cheesy pickup lines.  \n",
     "                      \"\"\"\n",
     "    \n",
     "    human_template = data['input']\n",
@@ -1141,10 +1084,6 @@
     "    print(\"\\n***********************************\")\n",
     "    print(prompt_template)\n",
     "    print(\"\\n***********************************\")\n",
-    "\n",
-    "    # Whay\n",
-    "\n",
-    "    print(f\"{isinstance(prompt_template, Runnable)}\")\n",
     "    \n",
     "    return prompt_template\n",
     "\n",
@@ -1197,25 +1136,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "3ec42658-6151-4699-92d5-e7bfbee8b99c",
-   "metadata": {},
-   "source": [
-    "# Why does it work?\n",
-    "\n",
-    "runnable.base line 4570\n",
-    "\n",
-    " If the output is a Runnable, invoke it\n",
-    "        if isinstance(output, Runnable):\n",
-    "            recursion_limit = config[\"recursion_limit\"]\n",
-    "            if recursion_limit <= 0:\n",
-    "                msg = (\n",
-    "                    f\"Recursion limit reached when invoking {self} with input {input}.\"\n",
-    "                )\n",
-    "                raise RecursionError(msg)"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "cbe66889-70e3-4a1d-a52f-8e09a4e84ccb",
@@ -1250,7 +1170,10 @@
     "chat_history = ChatMessageHistory()\n",
     "\n",
     "while True:\n",
-    "    question = input(\"Please input your question: (If you want end the conversation, please enter `QUIT`)\")\n",
+    "    question = input(\"\"\"\n",
+    "                     Please input your question: \n",
+    "                     (If you want end the conversation, please enter `QUIT`)\n",
+    "                     \"\"\")\n",
     "\n",
     "    # if you want to quit\n",
     "    if question == \"QUIT\":\n",
@@ -1274,6 +1197,14 @@
    "outputs": [],
    "source": [
     "chat_history"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4acfaa1d-5bd5-4367-b872-9aac08c53366",
+   "metadata": {},
+   "source": [
+    "## "
    ]
   },
   {
@@ -1476,6 +1407,125 @@
     "pipeline_ = step_1 | chatbot_prompt_fn | model | StrOutputParser()\n",
     "pipeline_.invoke({\"input\": \"對原住民教育宣導，改變其宗教、獵食方式，嚴格取締傷害動物的手段與工具\",\n",
     "                  \"messages\": demo_chat_history.messages})"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "baedf2ac-8cb4-4325-b0de-51f99eecfea0",
+   "metadata": {},
+   "source": [
+    "## Adeptus Mechanicus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "312e80ef-57f9-4412-b892-f0ea13dbaafd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import Image as Image_Ipython\n",
+    "\n",
+    "Image_Ipython('https://assets.warhammer-community.com/articles/88803229-7993-4e8c-a3c4-6e4fa2c38a34/zqzebys4roe7nhcd.jpg', width=500, height=750)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ae2274e-5c4c-483f-8b71-ae265ecc3655",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path = os.path.join(get_project_dir(), 'tutorial', 'LLM+Langchain', 'Week-7', 'Codex - Adeptus Mechanicus Index')\n",
+    "\n",
+    "vectorstore = FAISS.load_local(path, embeddings, allow_dangerous_deserialization=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b436079-bbe4-4c2f-b8ca-b10c5a64b3ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@chain\n",
+    "def chatbot_prompt_fn(data):\n",
+    "\n",
+    "    system_template = \"\"\"\n",
+    "                      You are a helpful AI assistant, assuming the role of a Tech-Priest of \n",
+    "                      the Adeptus Mechanicus (Techsorcist). You revere the Omnissiah and uphold \n",
+    "                      the sacred mysteries of the Machine God.\n",
+    "\n",
+    "                      You will answer all inquiries based on the given information:\n",
+    "                        \n",
+    "                      Context:\n",
+    "                      {context}\n",
+    "                        \n",
+    "                      Your responses must be in Traditional Chinese (繁體中文) and should reflect \n",
+    "                      the formal, reverent, and techno-mystical style of the Adeptus Mechanicus. \n",
+    "                      Use terms befitting a Tech-Priest, incorporating sacred machine terminology, \n",
+    "                      binary chants, and invocations of the Omnissiah where appropriate.\n",
+    "                      \"\"\"\n",
+    "    \n",
+    "    human_template = data['input']\n",
+    "    \n",
+    "    input_ = {\"system\": {\"template\": system_template},\n",
+    "              \"human\": {\"template\": human_template},\n",
+    "              \"messages\": None}\n",
+    "    \n",
+    "    prompt_template = build_standard_chat_prompt_template_v3(input_)\n",
+    "\n",
+    "    return prompt_template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a58cee99-b925-48e0-a5bc-5c880e8bcac9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "step_1 = RunnablePassthrough.assign(context=itemgetter(\"input\") | retriever | context_parser)\n",
+    "\n",
+    "demo_chat_history = ChatMessageHistory()\n",
+    "\n",
+    "pipeline_ = step_1 | chatbot_prompt_fn | model | StrOutputParser()\n",
+    "output = pipeline_.invoke({\"input\": \"對原住民教育宣導，改變其宗教、獵食方式，嚴格取締傷害動物的手段與工具\",\n",
+    "                  \"messages\": demo_chat_history.messages})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "696dde43-9394-4393-89e2-15d56a780d70",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e083c448-5e28-48de-9b75-d648909c7e09",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = pipeline_.invoke({\"input\": \"How to educate teenagers properly?\",\n",
+    "                  \"messages\": demo_chat_history.messages})\n",
+    "print(output)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62a885cb-3e4c-4644-93c5-a9606a17f0c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "output = pipeline_.invoke({\"input\": \"How to identify a potential princeps of a Titan?\",\n",
+    "                  \"messages\": demo_chat_history.messages})\n",
+    "print(output)"
    ]
   },
   {
