--- a/tutorial/LLM+Langchain/Week-2/notebook.ipynb
+++ b/tutorial/LLM+Langchain/Week-2/notebook.ipynb
@@ -695,7 +695,7 @@
    "id": "27b97f58-2e9a-452c-b6d2-31c3182524ef",
    "metadata": {},
    "source": [
-    "### Multiple Condition Filtering"
+    "## Multiple Condition Filtering"
    ]
   },
   {
@@ -703,7 +703,7 @@
    "id": "8ad44dcb-cc1b-4859-b8c1-658c05668c99",
    "metadata": {},
    "source": [
-    "## CNN dataset"
+    "### CNN dataset"
    ]
   },
   {
@@ -1739,14 +1739,6 @@
    "source": [
     "pipeline_.invoke({\"question\": \"Is it difficult to fine-tune BERT?\"})"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a94d7cb9-485e-4d97-b445-70c77528f152",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
